--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -1,22 +1,22 @@
 <!doctype html>
 <html>
 <head>
-    <title>Pebble OS</title>
+    <title>Poplar</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/pebble/style.css">
+    <link rel="stylesheet" href="/poplar/style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <img class="logo" src="logo.png" alt="Pebble OS" width="270" height="48"></img>
+            <img class="logo" src="logo.png" alt="Poplar" width="270" height="48"></img>
 
             <nav>
-                <a href="/pebble">Home</a>
-                <a href="https://github.com/IsaacWoods/pebble">Github</a>
-                <a href="/pebble/book">Book</a>
-                <a href="/pebble/doc/kernel">Kernel docs</a>
+                <a href="/poplar">Home</a>
+                <a href="https://github.com/IsaacWoods/poplar">Github</a>
+                <a href="/poplar/book">Book</a>
+                <a href="/poplar/doc/kernel">Kernel docs</a>
             </nav>
         </div>
 
