--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -4,7 +4,7 @@
     <title>Poplar</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/poplar/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -13,10 +13,10 @@
             <img class="logo" src="logo.png" alt="Poplar" width="270" height="48"></img>
 
             <nav>
-                <a href="/poplar">Home</a>
+                <a href="/">Home</a>
                 <a href="https://github.com/IsaacWoods/poplar">Github</a>
-                <a href="/poplar/book">Book</a>
-                <a href="/poplar/doc/kernel">Kernel docs</a>
+                <a href="/book">Book</a>
+                <a href="/doc/kernel">Kernel docs</a>
             </nav>
         </div>
 
