site: replace Pebble logo with basic font for now

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img class="logo" src="logo.png" alt="Poplar" width="270" height="48"></img>
+            <h1 class="logo">Poplar</h1>
 
             <nav>
                 <a href="/">Home</a>
