`xtask`: start work on smarter docs generator

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -16,7 +16,7 @@
                 <a href="/">Home</a>
                 <a href="https://github.com/IsaacWoods/poplar">Github</a>
                 <a href="/book">Book</a>
-                <a href="/doc/kernel">Kernel docs</a>
+                <a href="/doc/kernel">Docs</a>
             </nav>
         </div>
 
